--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,9 @@
-.gradle
-/build/
 
-# Ignore Gradle GUI config
-gradle-app.setting
+# exclude intellij *.iml files
+**/*.iml
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
+# exclude .idea directories
+**/.idea/
 
-# Cache of project
-.gradletasknamecache
-
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
+# exclude .gradle directories
+**/.gradle/
