Add default task

--- a/afu_gewschutz_export_ai/export/build.gradle
+++ b/afu_gewschutz_export_ai/export/build.gradle
@@ -11,6 +11,8 @@ def arealDelete = 'gsareal_delete.sql'
 def arealInsert = 'gsareal_insert.sql'
 
 
+defaultTasks 'clearStagingRows'
+
 task stageGsBereich(type: SqlExecutorTask){
     database = [dbUrl, dbUser, dbPass]
     sqlFiles = [bereichDelete, bereichInsert]
