--- a/arp_veriso_nplso_grundlagendaten/build.gradle
+++ b/arp_veriso_nplso_grundlagendaten/build.gradle
@@ -1,6 +1,8 @@
 import ch.so.agi.gretl.steps.*
 
 
+// deleteData only needed as a workaround
+def deleteData = 'delete.sql'
 def gemeindegrenze = 'agi_hoheitsgrenzen_pub.hoheitsgrenzen_gemeindegrenze.sql'
 def boflaeche = 'av_avdpool_ng.bodenbedeckung_boflaeche.sql'
 def einzelobjekt = 'av_avdpool_ng.einzelobjekte_einzelobjekt.sql'
@@ -13,7 +15,13 @@ def lsnachfuehrung = 'av_avdpool_ng.liegenschaften_lsnachfuehrung.sql'
 
 defaultTasks 'updateVerisoNplsoBaseData'
 
-task updateVerisoNplsoBaseData(type: Db2DbTask){
+// deleteBaseData onle needed as a workaround
+task deleteBaseData(type: SqlExecutorTask){
+    database = [targetDbUrl, targetDbUser, targetDbPass]
+    sqlFiles = [deleteData]
+}
+
+task updateVerisoNplsoBaseData(type: Db2DbTask, dependsOn: [deleteBaseData]){
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
