--- a/init_install_gradle.yml
+++ b/init_install_gradle.yml
@@ -1,5 +1,9 @@
 ---
 - hosts: all
+  
+  become: yes
+  become_method: sudo
+
   tasks:
   - name: generate locale de_CH.utf8
     command: locale-gen de_CH.utf8
@@ -27,7 +31,7 @@
       line: 'PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/opt/gradle/gradle-3.5.1/bin"'
 
   - name: Start gradle to have .gradle directory
-    shell: gradle
+    shell: /opt/gradle/gradle-3.5.1/bin/gradle
     become: vagrant
 
   - name: Copy init.gradle in Ordner ~/.gradle
