--- a/av_mopublic/build.gradle
+++ b/av_mopublic/build.gradle
@@ -1,12 +1,38 @@
+description = """\n
+Gebäudeadressen: Import des PLZ/Ortschafts-Datensatz (von swisstopo) noch nicht
+nachhaltig und die bestehenden Daten sind veraltet und Struktur dürfte auch ändern
+aufgrund des Wechsels von ogr2ogr zu ili2pg. Daher wird mit Verschnitt der Gebäude-
+eingänge mit den PLZ/Orschaften zur Zeit verzichten.
+"""
+
 import ch.so.agi.gretl.steps.*
 
 defaultTasks 'transferAvMopublic'
 
 task transferAvMopublic(type: Db2DbTask){
+    description = "Datenumbau in das SO-MOpublic-Publikationsmodell."    
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
-            new TransferSet('av_mopublic_mopublic_grundstueck.sql', 'av_mopublic.mopublic_grundstueck', true),
-            new TransferSet('av_mopublic_mopublic_grundstueck_proj.sql', 'av_mopublic.mopublic_grundstueck_proj', true),
+            new TransferSet("transform_av_mopublic_bodenbedeckung.sql", 'av_mopublic.mopublic_bodenbedeckung', true),
+            new TransferSet("transform_av_mopublic_bodenbedeckung_proj.sql", 'av_mopublic.mopublic_bodenbedeckung_proj', true),
+            new TransferSet("transform_av_mopublic_einzelobjekt_flaeche.sql", 'av_mopublic.mopublic_einzelobjekt_flaeche', true),
+            new TransferSet("transform_av_mopublic_einzelobjekt_linie.sql", 'av_mopublic.mopublic_einzelobjekt_linie', true),
+            new TransferSet("transform_av_mopublic_einzelobjekt_punkt.sql", 'av_mopublic.mopublic_einzelobjekt_punkt', true),
+            new TransferSet("transform_av_mopublic_objektname_pos.sql", 'av_mopublic.mopublic_objektname_pos', true),
+            new TransferSet("transform_av_mopublic_flurname.sql", 'av_mopublic.mopublic_flurname', true),
+            new TransferSet("transform_av_mopublic_gebaeudeadresse.sql", 'av_mopublic.mopublic_gebaeudeadresse', true),
+            new TransferSet("transform_av_mopublic_gelaendename.sql", 'av_mopublic.mopublic_gelaendename', true),
+            new TransferSet("transform_av_mopublic_gemeindegrenze.sql", 'av_mopublic.mopublic_gemeindegrenze', true),
+            new TransferSet("transform_av_mopublic_gemeindegrenze_proj.sql", 'av_mopublic.mopublic_gemeindegrenze_proj', true),
+            new TransferSet("transform_av_mopublic_grenzpunkt.sql", 'av_mopublic.mopublic_grenzpunkt', true),
+            new TransferSet("transform_av_mopublic_grundstueck.sql", 'av_mopublic.mopublic_grundstueck', true),
+            new TransferSet("transform_av_mopublic_grundstueck_proj.sql", 'av_mopublic.mopublic_grundstueck_proj', true),            
+            new TransferSet("transform_av_mopublic_fixpunkt.sql", 'av_mopublic.mopublic_fixpunkt', true),
+            new TransferSet("transform_av_mopublic_hoheitsgrenzpunkt.sql", 'av_mopublic.mopublic_hoheitsgrenzpunkt', true),
+            new TransferSet("transform_av_mopublic_ortsname.sql", 'av_mopublic.mopublic_ortsname', true),
+            new TransferSet("transform_av_mopublic_rohrleitung.sql", 'av_mopublic.mopublic_rohrleitung', true),
+            new TransferSet("transform_av_mopublic_strassenname_pos.sql", 'av_mopublic.mopublic_strassenname_pos', true),
+            new TransferSet("transform_av_mopublic_strassenachse.sql", 'av_mopublic.mopublic_strassenachse', true)
     ];        
 }
