--- a/afu_sorkas_pub/build.gradle
+++ b/afu_sorkas_pub/build.gradle
@@ -7,6 +7,7 @@ task transferAfuSorkas(type: Db2DbTask){
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
             new TransferSet('afu_sorkas_pub_betriebe.sql', 'afu_sorkas_pub.betriebe', true),
-            new TransferSet('afu_sorkas_pub_natstr.sql', 'afu_sorkas_pub.natstr', true)
+            new TransferSet('afu_sorkas_pub_natstr.sql', 'afu_sorkas_pub.natstr', true),
+            new TransferSet('afu_sorkas_pub_durchgangsstrassen.sql', 'afu_sorkas_pub.durchgangsstrassen', true)
     ];
 }
