--- a/afu_sorkas_pub/build.gradle
+++ b/afu_sorkas_pub/build.gradle
@@ -9,6 +9,7 @@ task transferAfuSorkas(type: Db2DbTask){
             new TransferSet('afu_sorkas_pub_betriebe.sql', 'afu_sorkas_pub.betriebe', true),
             new TransferSet('afu_sorkas_pub_natstr.sql', 'afu_sorkas_pub.natstr', true),
             new TransferSet('afu_sorkas_pub_durchgangsstrassen.sql', 'afu_sorkas_pub.durchgangsstrassen', true),
-            new TransferSet('afu_sorkas_pub_gasleitungen.sql', 'afu_sorkas_pub.gasleitungen', true)
+            new TransferSet('afu_sorkas_pub_gasleitungen.sql', 'afu_sorkas_pub.gasleitungen', true),
+            new TransferSet('afu_sorkas_pub_avt_oev_netz.sql', 'afu_sorkas_pub.avt_oev_netz', true)
     ];
 }
