--- a/afu_sorkas_pub/build.gradle
+++ b/afu_sorkas_pub/build.gradle
@@ -14,6 +14,7 @@ task transferAfuSorkas(type: Db2DbTask){
             new TransferSet('afu_sorkas_pub_betriebe_kb.sql', 'afu_sorkas_pub.betriebe_kb', true),
             new TransferSet('afu_sorkas_pub_natstr_kb.sql', 'afu_sorkas_pub.natstr_kb', true),
             new TransferSet('afu_sorkas_pub_durchgangsstrassen_kb.sql', 'afu_sorkas_pub.durchgangsstrassen_kb', true),
-            new TransferSet('afu_sorkas_pub_avt_oev_netz_kb.sql', 'afu_sorkas_pub.avt_oev_netz_kb', true)
+            new TransferSet('afu_sorkas_pub_avt_oev_netz_kb.sql', 'afu_sorkas_pub.avt_oev_netz_kb', true),
+            new TransferSet('afu_sorkas_pub_gasleitungen_kb.sql', 'afu_sorkas_pub.gasleitungen_kb', true)
     ];
 }
