--- a/afu_gewaesserschutz_pub/build.gradle
+++ b/afu_gewaesserschutz_pub/build.gradle
@@ -8,6 +8,7 @@ task transferAfuGewaesserschutz(type: Db2DbTask){
     transferSets = [
             new TransferSet('afu_gewaesserschutz_pub_aww_gsab.sql', 'afu_gewaesserschutz_pub.aww_gsab', true),
             new TransferSet('afu_gewaesserschutz_pub_aww_gszoar.sql', 'afu_gewaesserschutz_pub.aww_gszoar', true),
-            new TransferSet('afu_gewaesserschutz_pub_aww_gshiso.sql', 'afu_gewaesserschutz_pub.aww_gshiso', true)
+            new TransferSet('afu_gewaesserschutz_pub_aww_gshiso.sql', 'afu_gewaesserschutz_pub.aww_gshiso', true),
+            new TransferSet('afu_gewaesserschutz_pub_aww_gshora.sql', 'afu_gewaesserschutz_pub.aww_gshora', true)
     ];        
 }
