--- a/afu_gewaesserschutz_pub/build.gradle
+++ b/afu_gewaesserschutz_pub/build.gradle
@@ -9,6 +9,10 @@ task transferAfuGewaesserschutz(type: Db2DbTask){
             new TransferSet('afu_gewaesserschutz_pub_aww_gsab.sql', 'afu_gewaesserschutz_pub.aww_gsab', true),
             new TransferSet('afu_gewaesserschutz_pub_aww_gszoar.sql', 'afu_gewaesserschutz_pub.aww_gszoar', true),
             new TransferSet('afu_gewaesserschutz_pub_aww_gshiso.sql', 'afu_gewaesserschutz_pub.aww_gshiso', true),
-            new TransferSet('afu_gewaesserschutz_pub_aww_gshora.sql', 'afu_gewaesserschutz_pub.aww_gshora', true)
+            new TransferSet('afu_gewaesserschutz_pub_aww_gshora.sql', 'afu_gewaesserschutz_pub.aww_gshora', true),
+            //new TransferSet('afu_gewaesserschutz_pub_aww_gszoar_v.sql', 'afu_gewaesserschutz_pub.aww_gszoar_v', true),
+            new TransferSet('afu_gewaesserschutz_pub_aww_gszoak.sql', 'afu_gewaesserschutz_pub.aww_gszoak', true),
+            new TransferSet('afu_gewaesserschutz_pub_aww_gszustr.sql', 'afu_gewaesserschutz_pub.aww_gszustr', true),
+            new TransferSet('afu_gewaesserschutz_pub_aww_gsab_v.sql', 'afu_gewaesserschutz_pub.aww_gsab_v', true)
     ];        
 }
