--- a/afu_vegas_pub/build.gradle
+++ b/afu_vegas_pub/build.gradle
@@ -6,9 +6,9 @@ task transferAfuVegas(type: Db2DbTask){
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
-            new TransferSet('afu_vegas_pub_baggerschlitz.sql', 'afu_vegas_pub.baggerschlitz', true)/*,
-            new TransferSet('afu_gewisso_pub_gewisso.sql', 'afu_gewisso_pub.gewisso', true),
-            new TransferSet('afu_gewisso_pub_abschnnutzen_gdbsigmas.sql', 'afu_gewisso_pub.abschnnutzen_gdbsigmas', true),
+            new TransferSet('afu_vegas_pub_baggerschlitz.sql', 'afu_vegas_pub.baggerschlitz', true),
+            new TransferSet('afu_vegas_pub_gerammtes_piezometer.sql', 'afu_vegas_pub.gerammtes_piezometer', true),
+            new TransferSet('afu_vegas_pub_sodbrunnen.sql', 'afu_vegas_pub.sodbrunnen', true)/*,
             new TransferSet('afu_gewisso_pub_abschnprio_gdbsigmas.sql', 'afu_gewisso_pub.abschnprio_gdbsigmas', true),
             new TransferSet('afu_gewisso_pub_jfv_fischenz.sql', 'afu_gewisso_pub.jfv_fischenz', true),
             new TransferSet('afu_gewisso_pub_san_fischw_nicht_wk.sql', 'afu_gewisso_pub.san_fischw_nicht_wk', true),
