--- a/afu_vegas_pub/build.gradle
+++ b/afu_vegas_pub/build.gradle
@@ -12,6 +12,7 @@ task transferAfuVegas(type: Db2DbTask){
             new TransferSet('afu_vegas_pub_quelle_gefasst.sql', 'afu_vegas_pub.quelle_gefasst', true),
             new TransferSet('afu_vegas_pub_quelle_ungefasst.sql', 'afu_vegas_pub.quelle_ungefasst', true),
             new TransferSet('afu_vegas_pub_grundwasserwaerme.sql', 'afu_vegas_pub.grundwasserwaerme', true),
-            new TransferSet('afu_vegas_pub_bohrung.sql', 'afu_vegas_pub.bohrung', true)
+            new TransferSet('afu_vegas_pub_bohrung.sql', 'afu_vegas_pub.bohrung', true),
+            new TransferSet('afu_vegas_pub_filterbrunnen.sql', 'afu_vegas_pub.filterbrunnen', true)
     ];
 }
