adding avt_oeffentlicher_verkehr_pub.netz

--- a/avt_oeffentlicher_verkehr_pub/build.gradle
+++ b/avt_oeffentlicher_verkehr_pub/build.gradle
@@ -9,6 +9,7 @@ task transferAvtOeffentlicherVerkehr(type: Db2DbTask){
             new TransferSet('avt_oeffentlicher_verkehr_pub_haltestellen.sql',
                     'avt_oeffentlicher_verkehr_pub.haltestellen', true),
             new TransferSet('avt_oeffentlicher_verkehr_pub_haltestellen_ausserkantonal.sql',
-                    'avt_oeffentlicher_verkehr_pub.haltestellen_ausserkantonal', true)
+                    'avt_oeffentlicher_verkehr_pub.haltestellen_ausserkantonal', true),
+            new TransferSet('avt_oeffentlicher_verkehr_pub_netz.sql', 'avt_oeffentlicher_verkehr_pub.netz', true)
     ];
 }
