--- a/avt_oeffentlicher_verkehr_pub/build.gradle
+++ b/avt_oeffentlicher_verkehr_pub/build.gradle
@@ -10,6 +10,8 @@ task transferAvtOeffentlicherVerkehr(type: Db2DbTask){
                     'avt_oeffentlicher_verkehr_pub.haltestellen', true),
             new TransferSet('avt_oeffentlicher_verkehr_pub_haltestellen_ausserkantonal.sql',
                     'avt_oeffentlicher_verkehr_pub.haltestellen_ausserkantonal', true),
-            new TransferSet('avt_oeffentlicher_verkehr_pub_netz.sql', 'avt_oeffentlicher_verkehr_pub.netz', true)
+            new TransferSet('avt_oeffentlicher_verkehr_pub_netz.sql', 'avt_oeffentlicher_verkehr_pub.netz', true),
+            new TransferSet('avt_oeffentlicher_verkehr_pub_netz_ausserkantonal.sql',
+                    'avt_oeffentlicher_verkehr_pub.netz_ausserkantonal', true)
     ];
 }
