--- a/avt_gesamtverkehrsmodell2010_pub/build.gradle
+++ b/avt_gesamtverkehrsmodell2010_pub/build.gradle
@@ -9,6 +9,8 @@ task transferAvtGesamtverkehrsmodell2010(type: Db2DbTask){
             new TransferSet('avt_gesamtverkehrsmodell2010_pub_gesamtverkehrsmodell.sql',
                     'avt_gesamtverkehrsmodell2010_pub.gesamtverkehrsmodell', true),
             new TransferSet('avt_gesamtverkehrsmodell2010_pub_auslastung.sql',
-                    'avt_gesamtverkehrsmodell2010_pub.auslastung', true)
+                    'avt_gesamtverkehrsmodell2010_pub.auslastung', true),
+            new TransferSet('avt_gesamtverkehrsmodell2010_pub_gesamtverkehrsmodell_oev_2010.sql',
+                    'avt_gesamtverkehrsmodell2010_pub.gesamtverkehrsmodell_oev_2010', true)
     ];
 }
