--- a/avt_kantonsstrassen_pub/build.gradle
+++ b/avt_kantonsstrassen_pub/build.gradle
@@ -8,6 +8,8 @@ task transferAvtKantonsstrassen(type: Db2DbTask){
     transferSets = [
             new TransferSet('avt_kantonsstrassen_pub_bezugspunkt.sql', 'avt_kantonsstrassen_pub.bezugspunkt', true),
             new TransferSet('avt_kantonsstrassen_pub_achse.sql', 'avt_kantonsstrassen_pub.achse', true),
-            new TransferSet('avt_kantonsstrassen_pub_baustelle.sql', 'avt_kantonsstrassen_pub.baustelle', true)
+            new TransferSet('avt_kantonsstrassen_pub_baustelle.sql', 'avt_kantonsstrassen_pub.baustelle', true),
+            new TransferSet('avt_kantonsstrassen_pub_strassenklassierung.sql', 
+                    'avt_kantonsstrassen_pub.strassenklassierung', true)
     ];
 }
