--- a/afu_gewaesserschutz_pub/build.gradle
+++ b/afu_gewaesserschutz_pub/build.gradle
@@ -13,6 +13,7 @@ task transferAfuGewaesserschutz(type: Db2DbTask){
             //new TransferSet('afu_gewaesserschutz_pub_aww_gszoar_v.sql', 'afu_gewaesserschutz_pub.aww_gszoar_v', true),
             new TransferSet('afu_gewaesserschutz_pub_aww_gszoak.sql', 'afu_gewaesserschutz_pub.aww_gszoak', true),
             new TransferSet('afu_gewaesserschutz_pub_aww_gszustr.sql', 'afu_gewaesserschutz_pub.aww_gszustr', true),
-            new TransferSet('afu_gewaesserschutz_pub_aww_gsab_v.sql', 'afu_gewaesserschutz_pub.aww_gsab_v', true)
+            new TransferSet('afu_gewaesserschutz_pub_aww_gsab_v.sql', 'afu_gewaesserschutz_pub.aww_gsab_v', true),
+            new TransferSet('afu_gewaesserschutz_pub_aww_gwomac.sql', 'afu_gewaesserschutz_pub.aww_gwomac', true)
     ];        
 }
