--- a/afu_naturgefahren_pub/build.gradle
+++ b/afu_naturgefahren_pub/build.gradle
@@ -9,6 +9,7 @@ task transferAfuNaturgefahren(type: Db2DbTask){
             new TransferSet('afu_naturgefahren_pub_naturgefahren_ereignis.sql',
                     'afu_naturgefahren_pub.naturgefahren_ereignis', true),
             new TransferSet('afu_naturgefahren_pub_naturgefahren.sql','afu_naturgefahren_pub.naturgefahren', true),
-            new TransferSet('afu_naturgefahren_pub_doline.sql','afu_naturgefahren_pub.doline', true)
+            new TransferSet('afu_naturgefahren_pub_doline.sql','afu_naturgefahren_pub.doline', true),
+            new TransferSet('afu_naturgefahren_pub_ueberflutung.sql','afu_naturgefahren_pub.ueberflutung', true)
     ];
 }
