Adding afu_gewisso_pub.ezg_kt_so_1000

--- a/afu_gewisso_pub/build.gradle
+++ b/afu_gewisso_pub/build.gradle
@@ -14,6 +14,7 @@ task transferAfuGewisso(type: Db2DbTask){
             new TransferSet('afu_gewisso_pub_san_fischw_nicht_wk.sql', 'afu_gewisso_pub.san_fischw_nicht_wk', true),
             new TransferSet('afu_gewisso_pub_oeko_abstuerze.sql', 'afu_gewisso_pub.oeko_abstuerze', true),
             new TransferSet('afu_gewisso_pub_oeko_bauwerke.sql', 'afu_gewisso_pub.oeko_bauwerke', true),
-            new TransferSet('afu_gewisso_pub_messstellen.sql', 'afu_gewisso_pub.messstellen', true)
+            new TransferSet('afu_gewisso_pub_messstellen.sql', 'afu_gewisso_pub.messstellen', true),
+            new TransferSet('afu_gewisso_pub_ezg_kt_so_1000.sql', 'afu_gewisso_pub.ezg_kt_so_1000', true)
     ];        
 }
