--- a/afu_gewisso_pub/build.gradle
+++ b/afu_gewisso_pub/build.gradle
@@ -16,6 +16,7 @@ task transferAfuGewisso(type: Db2DbTask){
             new TransferSet('afu_gewisso_pub_oeko_bauwerke.sql', 'afu_gewisso_pub.oeko_bauwerke', true),
             new TransferSet('afu_gewisso_pub_messstellen.sql', 'afu_gewisso_pub.messstellen', true),
             new TransferSet('afu_gewisso_pub_ezg_kt_so_1000.sql', 'afu_gewisso_pub.ezg_kt_so_1000', true),
-            new TransferSet('afu_gewisso_pub_ezg_kt_so_150.sql', 'afu_gewisso_pub.ezg_kt_so_150', true)
+            new TransferSet('afu_gewisso_pub_ezg_kt_so_150.sql', 'afu_gewisso_pub.ezg_kt_so_150', true),
+            new TransferSet('afu_gewisso_pub_ezg_kt_so_40.sql', 'afu_gewisso_pub.ezg_kt_so_40', true)
     ];        
 }
