--- a/afu_altlasten_pub/build.gradle
+++ b/afu_altlasten_pub/build.gradle
@@ -6,6 +6,8 @@ task transferAfuAltlasten(type: Db2DbTask){
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
-            new TransferSet('afu_altlasten_pub_altlasten_belastete_standorte_internet.sql', 'afu_altlasten_pub.altlasten_belastete_standorte_internet', true)
+            //new TransferSet('afu_altlasten_pub_altlasten_belastete_standorte_internet.sql',
+            // 'afu_altlasten_pub.altlasten_belastete_standorte_internet', true)
+            new TransferSet('afu_altlasten_pub_belastete_standorte.sql','afu_altlasten_pub.belastete_standorte', true)
     ];        
 }
