--- a/afu_isboden_pub/build.gradle
+++ b/afu_isboden_pub/build.gradle
@@ -10,6 +10,7 @@ task transferAfuIsboden(type: Db2DbTask){
             new TransferSet('afu_isboden_pub_bodeneinheit_lw.sql', 'afu_isboden_pub.bodeneinheit_lw', true),
             //new TransferSet('afu_isboden_pub_erosionsgefahr.sql', 'afu_isboden_pub.erosionsgefahr', true),
             new TransferSet('afu_isboden_pub_bodenprofilstandort.sql', 'afu_isboden_pub.bodenprofilstandort', true),
-            new TransferSet('afu_isboden_pub_bodenerosion.sql', 'afu_isboden_pub.bodenerosion', true)
+            new TransferSet('afu_isboden_pub_bodenerosion.sql', 'afu_isboden_pub.bodenerosion', true),
+            new TransferSet('afu_isboden_pub_bodeneinheit.sql', 'afu_isboden_pub.bodeneinheit', true)
     ];
 }
