Adding afu_abbaustellen_pub.teilregion_aaregaeu

--- a/afu_abbaustellen_pub/build.gradle
+++ b/afu_abbaustellen_pub/build.gradle
@@ -6,6 +6,8 @@ task transferAfuAbbaustellen(type: Db2DbTask){
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
-            new TransferSet('afu_abbaustellen_pub_abbaustelle.sql', 'afu_abbaustellen_pub.abbaustelle', true)
+            new TransferSet('afu_abbaustellen_pub_abbaustelle.sql', 'afu_abbaustellen_pub.abbaustelle', true),
+            new TransferSet('afu_abbaustellen_pub_teilregion_aaregaeu.sql', 'afu_abbaustellen_pub.teilregion_aaregaeu',
+                    true)
     ];
 }
