--- a/arp_npl_import/build.gradle
+++ b/arp_npl_import/build.gradle
@@ -64,18 +64,31 @@ task transformArpNpl(type: Db2DbTask) {
     sourceDb =  [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     transferSets = [
-            new TransferSet("transform_arp_npl_pub_nutzungsplanung_grundnutzung.sql", 'arp_npl_pub.nutzungsplanung_grundnutzung', true),
-            new TransferSet("transform_arp_npl_pub_nutzungsplanung_ueberlagernd_flaeche.sql", 'arp_npl_pub.nutzungsplanung_ueberlagernd_flaeche', true),
-            new TransferSet("transform_arp_npl_pub_nutzungsplanung_ueberlagernd_linie.sql", 'arp_npl_pub.nutzungsplanung_ueberlagernd_linie', true),
-            new TransferSet("transform_arp_npl_pub_nutzungsplanung_ueberlagernd_punkt.sql", 'arp_npl_pub.nutzungsplanung_ueberlagernd_punkt', true),
+            new TransferSet("transform_arp_npl_pub_nutzungsplanung_grundnutzung_json_dokumente.sql", 'arp_npl_pub.nutzungsplanung_grundnutzung', true),
+            new TransferSet("transform_arp_npl_pub_nutzungsplanung_ueberlagernd_flaeche_json_dokumente.sql", 'arp_npl_pub.nutzungsplanung_ueberlagernd_flaeche', true),
+            new TransferSet("transform_arp_npl_pub_nutzungsplanung_ueberlagernd_linie_json_dokumente.sql", 'arp_npl_pub.nutzungsplanung_ueberlagernd_linie', true),
+            new TransferSet("transform_arp_npl_pub_nutzungsplanung_ueberlagernd_punkt_json_dokumente.sql", 'arp_npl_pub.nutzungsplanung_ueberlagernd_punkt', true),
             new TransferSet("transform_arp_npl_pub_nutzungsplanung_beschriftung.sql", 'arp_npl_pub.nutzungsplanung_nutzungsplanung_beschriftung', true),
-            new TransferSet("transform_arp_npl_pub_erschliessung_flaechenobjekt.sql", 'arp_npl_pub.nutzungsplanung_erschliessung_flaechenobjekt', true),
-            new TransferSet("transform_arp_npl_pub_erschliessung_linienobjekt.sql", 'arp_npl_pub.nutzungsplanung_erschliessung_linienobjekt', true),
-            new TransferSet("transform_arp_npl_pub_erschliessung_punktobjekt.sql", 'arp_npl_pub.nutzungsplanung_erschliessung_punktobjekt', true),
+            new TransferSet("transform_arp_npl_pub_erschliessung_flaechenobjekt_json_dokumente.sql", 'arp_npl_pub.nutzungsplanung_erschliessung_flaechenobjekt', true),
+            new TransferSet("transform_arp_npl_pub_erschliessung_linienobjekt_json_dokumente.sql", 'arp_npl_pub.nutzungsplanung_erschliessung_linienobjekt', true),
+            new TransferSet("transform_arp_npl_pub_erschliessung_punktobjekt_json_dokumente.sql", 'arp_npl_pub.nutzungsplanung_erschliessung_punktobjekt', true),
             new TransferSet("transform_arp_npl_pub_erschliessung_beschriftung.sql", 'arp_npl_pub.nutzungsplanung_erschliessung_beschriftung', true),
             new TransferSet("transform_arp_npl_pub_vs_perimeter_verfahrensstand.sql", 'arp_npl_pub.nutzungsplanung_vs_perimeter_verfahrensstand', true),
             new TransferSet("transform_arp_npl_pub_vs_perimeter_beschriftung.sql", 'arp_npl_pub.nutzungsplanung_vs_perimeter_beschriftung', true),
             new TransferSet("transform_arp_npl_pub_transfermetadaten.sql", 'arp_npl_pub.nutzungsplanung_transfermetadaten', true)
+
+            //new TransferSet("transform_arp_npl_pub_nutzungsplanung_grundnutzung.sql", 'arp_npl_pub.nutzungsplanung_grundnutzung', true),
+            //new TransferSet("transform_arp_npl_pub_nutzungsplanung_ueberlagernd_flaeche.sql", 'arp_npl_pub.nutzungsplanung_ueberlagernd_flaeche', true),
+            //new TransferSet("transform_arp_npl_pub_nutzungsplanung_ueberlagernd_linie.sql", 'arp_npl_pub.nutzungsplanung_ueberlagernd_linie', true),
+            //new TransferSet("transform_arp_npl_pub_nutzungsplanung_ueberlagernd_punkt.sql", 'arp_npl_pub.nutzungsplanung_ueberlagernd_punkt', true),
+            //new TransferSet("transform_arp_npl_pub_nutzungsplanung_beschriftung.sql", 'arp_npl_pub.nutzungsplanung_nutzungsplanung_beschriftung', true),
+            //new TransferSet("transform_arp_npl_pub_erschliessung_flaechenobjekt.sql", 'arp_npl_pub.nutzungsplanung_erschliessung_flaechenobjekt', true),
+            //new TransferSet("transform_arp_npl_pub_erschliessung_linienobjekt.sql", 'arp_npl_pub.nutzungsplanung_erschliessung_linienobjekt', true),
+            //new TransferSet("transform_arp_npl_pub_erschliessung_punktobjekt.sql", 'arp_npl_pub.nutzungsplanung_erschliessung_punktobjekt', true),
+            //new TransferSet("transform_arp_npl_pub_erschliessung_beschriftung.sql", 'arp_npl_pub.nutzungsplanung_erschliessung_beschriftung', true),
+            //new TransferSet("transform_arp_npl_pub_vs_perimeter_verfahrensstand.sql", 'arp_npl_pub.nutzungsplanung_vs_perimeter_verfahrensstand', true),
+            //new TransferSet("transform_arp_npl_pub_vs_perimeter_beschriftung.sql", 'arp_npl_pub.nutzungsplanung_vs_perimeter_beschriftung', true),
+            //new TransferSet("transform_arp_npl_pub_transfermetadaten.sql", 'arp_npl_pub.nutzungsplanung_transfermetadaten', true)
     ]
 }
 
