[arp_npl_import] Umbau-Queries gefixed. Dokumente, die mit keinen weiteren Dokumenten verknüpft sind, fehlten in der Pub-Tabelle.

--- a/arp_npl_import/build.gradle
+++ b/arp_npl_import/build.gradle
@@ -20,6 +20,9 @@ ext {
     sourceDbUrl = "jdbc:postgresql://geodb.verw.rootso.org:5432/sogis"
     sourceDbUser = "datasync"
     sourceDbPass = System.env.sourceDbPass    
+    //sourceDbUrl = "jdbc:postgresql://geodb-dev.cgjofbdf5rqg.eu-central-1.rds.amazonaws.com:5432/xanadu2"
+    //sourceDbUser = "stefan"
+    //sourceDbPass = System.env.sourceDbPass    
     //sourceDbPass = "mspublic"    
     //targetDbUrl = "jdbc:postgresql://geodb-t.verw.rootso.org:5432/sogis"
     //targetDbUser = "datasync"
