--- a/afu_abbaustellen_pub/build.gradle
+++ b/afu_abbaustellen_pub/build.gradle
@@ -8,6 +8,7 @@ task transferAfuAbbaustellen(type: Db2DbTask){
     transferSets = [
             new TransferSet('afu_abbaustellen_pub_abbaustelle.sql', 'afu_abbaustellen_pub.abbaustelle', true),
             new TransferSet('afu_abbaustellen_pub_teilregion_aaregaeu.sql', 'afu_abbaustellen_pub.teilregion_aaregaeu',
-                    true)
+                    true),
+            new TransferSet('afu_abbaustellen_pub_abbau_menge.sql', 'afu_abbaustellen_pub.abbau_menge', true)
     ];
 }
