--- a/afu_ekat2010_pub/build.gradle
+++ b/afu_ekat2010_pub/build.gradle
@@ -7,6 +7,7 @@ task transferAfuEkat2010(type: Db2DbTask){
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
             new TransferSet('afu_ekat2010_pub_uplus.sql', 'afu_ekat2010_pub.uplus', true),
-            new TransferSet('afu_ekat2010_pub_gesamtemission.sql', 'afu_ekat2010_pub.gesamtemission', true)
+            new TransferSet('afu_ekat2010_pub_gesamtemission.sql', 'afu_ekat2010_pub.gesamtemission', true),
+            new TransferSet('afu_ekat2010_pub_industrie_gewerbe.sql', 'afu_ekat2010_pub.industrie_gewerbe', true)
     ];
 }
