--- a/afu_gerda_pub/build.gradle
+++ b/afu_gerda_pub/build.gradle
@@ -6,6 +6,7 @@ task transferAfuGerda(type: Db2DbTask){
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
-            new TransferSet('afu_gerda_pub_gew_bew_ad.sql', 'afu_gerda_pub.gew_bew_ad', true)
+            new TransferSet('afu_gerda_pub_gew_bew_ad.sql', 'afu_gerda_pub.gew_bew_ad', true),
+            new TransferSet('afu_gerda_pub_erdsonde.sql', 'afu_gerda_pub.erdsonde', true)
     ];
 }
