--- a/afu_gerda_pub/build.gradle
+++ b/afu_gerda_pub/build.gradle
@@ -7,6 +7,8 @@ task transferAfuGerda(type: Db2DbTask){
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
             new TransferSet('afu_gerda_pub_gew_bew_ad.sql', 'afu_gerda_pub.gew_bew_ad', true),
-            new TransferSet('afu_gerda_pub_erdsonde.sql', 'afu_gerda_pub.erdsonde', true)
+            new TransferSet('afu_gerda_pub_erdsonde.sql', 'afu_gerda_pub.erdsonde', true),
+            //new TransferSet('afu_gerda_pub_ews_max_tiefe.sql', 'afu_gerda_pub.ews_max_tiefe', true),
+            new TransferSet('afu_gerda_pub_private_quelle.sql', 'afu_gerda_pub.private_quelle', true)
     ];
 }
