--- a/afu_gerda_pub/build.gradle
+++ b/afu_gerda_pub/build.gradle
@@ -8,8 +8,6 @@ task transferAfuGerda(type: Db2DbTask){
     transferSets = [
             new TransferSet('afu_gerda_pub_gew_bew_ad.sql', 'afu_gerda_pub.gew_bew_ad', true),
             new TransferSet('afu_gerda_pub_erdsonde.sql', 'afu_gerda_pub.erdsonde', true),
-            //new TransferSet('afu_gerda_pub_ews_max_tiefe.sql', 'afu_gerda_pub.ews_max_tiefe', true),
-            new TransferSet('afu_gerda_pub_private_quelle.sql', 'afu_gerda_pub.private_quelle', true),
-            new TransferSet('afu_gerda_pub_problembereich.sql', 'afu_gerda_pub.problembereich', true)
+            new TransferSet('afu_gerda_pub_ews_max_tiefe.sql', 'afu_gerda_pub.ews_max_tiefe', true)
     ];
 }
