--- a/afu_erdwaerme_pub/build.gradle
+++ b/afu_erdwaerme_pub/build.gradle
@@ -7,6 +7,8 @@ task transferAfuErdwaerme(type: Db2DbTask){
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
             new TransferSet('afu_erdwaerme_pub_private_quelle.sql', 'afu_erdwaerme_pub.private_quelle', true),
-            new TransferSet('afu_erdwaerme_pub_problembereich.sql', 'afu_erdwaerme_pub.problembereich', true)
+            new TransferSet('afu_erdwaerme_pub_problembereich.sql', 'afu_erdwaerme_pub.problembereich', true),
+            new TransferSet('afu_erdwaerme_pub_ueberlagerter_ews_bereich.sql',
+                    'afu_erdwaerme_pub.ueberlagerter_ews_bereich', true)
     ];
 }
