--- a/afu_grundwasserbewirtschaftung_pub/build.gradle
+++ b/afu_grundwasserbewirtschaftung_pub/build.gradle
@@ -7,6 +7,8 @@ task transferAfuGrundwasserbewirtschaftung(type: Db2DbTask){
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
             new TransferSet('afu_grundwasserbewirtschaftung_pub_aww_gsmora.sql',
-                    'afu_grundwasserbewirtschaftung_pub.aww_gsmora', true)
+                    'afu_grundwasserbewirtschaftung_pub.aww_gsmora', true),
+            new TransferSet('afu_grundwasserbewirtschaftung_pub_aww_gsmiso.sql',
+                    'afu_grundwasserbewirtschaftung_pub.aww_gsmiso', true)
     ];
 }
