--- a/afu_grundwasserbewirtschaftung_pub/build.gradle
+++ b/afu_grundwasserbewirtschaftung_pub/build.gradle
@@ -9,6 +9,8 @@ task transferAfuGrundwasserbewirtschaftung(type: Db2DbTask){
             new TransferSet('afu_grundwasserbewirtschaftung_pub_aww_gsmora.sql',
                     'afu_grundwasserbewirtschaftung_pub.aww_gsmora', true),
             new TransferSet('afu_grundwasserbewirtschaftung_pub_aww_gsmiso.sql',
-                    'afu_grundwasserbewirtschaftung_pub.aww_gsmiso', true)
+                    'afu_grundwasserbewirtschaftung_pub.aww_gsmiso', true),
+            new TransferSet('afu_grundwasserbewirtschaftung_pub_aww_gstira.sql',
+                    'afu_grundwasserbewirtschaftung_pub.aww_gstira', true)
     ];
 }
