--- a/afu_vsb_pub/build.gradle
+++ b/afu_vsb_pub/build.gradle
@@ -6,6 +6,7 @@ task transferAfuVsb(type: Db2DbTask){
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
-            new TransferSet('afu_vsb_pub_pruefperimeter.sql', 'afu_vsb_pub.pruefperimeter', true)
+            new TransferSet('afu_vsb_pub_pruefperimeter.sql', 'afu_vsb_pub.pruefperimeter', true),
+            new TransferSet('afu_vsb_pub_nabodat.sql', 'afu_vsb_pub.nabodat', true)
     ];
 }
