--- a/afu_vsb_pub/build.gradle
+++ b/afu_vsb_pub/build.gradle
@@ -7,6 +7,7 @@ task transferAfuVsb(type: Db2DbTask){
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
             new TransferSet('afu_vsb_pub_pruefperimeter.sql', 'afu_vsb_pub.pruefperimeter', true),
-            new TransferSet('afu_vsb_pub_nabodat.sql', 'afu_vsb_pub.nabodat', true)
+            new TransferSet('afu_vsb_pub_nabodat.sql', 'afu_vsb_pub.nabodat', true),
+            new TransferSet('afu_vsb_pub_bodenbelastungsgebiet.sql', 'afu_vsb_pub.bodenbelastungsgebiet', true)
     ];
 }
