--- a/afu_vsb_pub/build.gradle
+++ b/afu_vsb_pub/build.gradle
@@ -8,6 +8,7 @@ task transferAfuVsb(type: Db2DbTask){
     transferSets = [
             new TransferSet('afu_vsb_pub_pruefperimeter.sql', 'afu_vsb_pub.pruefperimeter', true),
             new TransferSet('afu_vsb_pub_nabodat.sql', 'afu_vsb_pub.nabodat', true),
-            new TransferSet('afu_vsb_pub_bodenbelastungsgebiet.sql', 'afu_vsb_pub.bodenbelastungsgebiet', true)
+            new TransferSet('afu_vsb_pub_bodenbelastungsgebiet.sql', 'afu_vsb_pub.bodenbelastungsgebiet', true),
+            new TransferSet('afu_vsb_pub_flaeche.sql', 'afu_vsb_pub.flaeche', true)
     ];
 }
