--- a/afu_ekat2005_pub/build.gradle
+++ b/afu_ekat2005_pub/build.gradle
@@ -8,6 +8,7 @@ task transferAfuEkat2005(type: Db2DbTask){
     transferSets = [
             new TransferSet('afu_ekat2005_pub_gesamtemission.sql', 'afu_ekat2005_pub.gesamtemission', true),
             new TransferSet('afu_ekat2005_pub_industrie_gewerbe.sql', 'afu_ekat2005_pub.industrie_gewerbe', true),
-            new TransferSet('afu_ekat2005_pub_haushalt.sql', 'afu_ekat2005_pub.haushalt', true)
+            new TransferSet('afu_ekat2005_pub_haushalt.sql', 'afu_ekat2005_pub.haushalt', true),
+            new TransferSet('afu_ekat2005_pub_verkehr.sql', 'afu_ekat2005_pub.verkehr', true)
     ];
 }
