Adding arp_npl_pub.nutzungsplanung_erschliessung_linienobjekt

--- a/arp_npl_pub/build.gradle
+++ b/arp_npl_pub/build.gradle
@@ -17,6 +17,8 @@ task transferArpNpl(type: Db2DbTask){
             new TransferSet('arp_npl_pub_nutzungsplanung_ueberlagernd_linie.sql',
                     'arp_npl_pub.nutzungsplanung_ueberlagernd_linie', true),
             new TransferSet('arp_npl_pub_nutzungsplanung_erschliessung_flaechenobjekt.sql',
-                    'arp_npl_pub.nutzungsplanung_erschliessung_flaechenobjekt', true)
+                    'arp_npl_pub.nutzungsplanung_erschliessung_flaechenobjekt', true),
+            new TransferSet('arp_npl_pub_nutzungsplanung_erschliessung_linienobjekt.sql',
+                    'arp_npl_pub.nutzungsplanung_erschliessung_linienobjekt', true)
     ];
 }
