Adding ada_adagisd_pub.punktgeometrien

--- a/ada_adagisd_pub/build.gradle
+++ b/ada_adagisd_pub/build.gradle
@@ -6,6 +6,7 @@ task transferAdagisd(type: Db2DbTask){
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
-            new TransferSet('ada_adagisd_pub_object.sql', 'ada_adagisd_pub.object', true)
+            new TransferSet('ada_adagisd_pub_object.sql', 'ada_adagisd_pub.object', true),
+            new TransferSet('ada_adagisd_pub_punktgeometrien.sql', 'ada_adagisd_pub.punktgeometrien', true)
     ];
 }
