Adding alw_neophyten_pub.massnahmen

--- a/alw_neophyten_pub/build.gradle
+++ b/alw_neophyten_pub/build.gradle
@@ -6,6 +6,7 @@ task transferAlwNeophyten(type: Db2DbTask){
     sourceDb = [sourceDbUrl, sourceDbUser, sourceDbPass]
     targetDb = [targetDbUrl, targetDbUser, targetDbPass]
     transferSets = [
-            new TransferSet('alw_neophyten_pub_neophyten.sql', 'alw_neophyten_pub.neophyten', true)
+            new TransferSet('alw_neophyten_pub_neophyten.sql', 'alw_neophyten_pub.neophyten', true),
+            new TransferSet('alw_neophyten_pub_massnahmen.sql', 'alw_neophyten_pub.massnahmen', true)
     ];
 }
